--- a/TestGit/Base.lproj/Main.storyboard
+++ b/TestGit/Base.lproj/Main.storyboard
@@ -28,6 +28,9 @@
                                 <rect key="frame" x="16" y="193" width="343" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Click me!"/>
+                                <connections>
+                                    <action selector="butClick2:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NWr-up-eRl"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="New label added" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F2V-LY-LEk">
                                 <rect key="frame" x="16" y="323" width="343" height="21"/>
